--- a/HelloGCP/src/HelloGCP.csproj
+++ b/HelloGCP/src/HelloGCP.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netcoreapp6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Google.Cloud.Logging.V2" Version="4.1.0" />
+  </ItemGroup>
 
 </Project>
